# space_invaders

./: .gitignore  Cargo.toml  LICENSE  README.md
doc/: WASM.md
src/: alien.rs  game.rs  main.rs  player.rs  projectile.rs
webbuild/: index.html
